--- a/Pond_ContactMe.html
+++ b/Pond_ContactMe.html
@@ -20,6 +20,10 @@
                 <a class="dropdown-item" href="Pond_Entrepreneurship.html">
                     Entrepreneurship Project
                 </a>
+                <a class="dropdown-item" href="Pond_HTMLProject.html">
+                    HTML Website Project</a>
+                <a class="dropdown-item" href="Pond_TextAdventure.html">
+                    Text Adventure Project</a>
                 <!--<a class="dropdown-item" href="Pond_WinchProject.html">
                     Winch Project
                 </a>-->
@@ -36,10 +40,12 @@
             </nav>
         </div>
         <!--banner starts here-->
-        <div class="jumbotron col-sm-12 text-center">
-           <h1>Contact Me</h1>
-           <p>Address: Dublin California</p>
-           <p>Email: maggiepond888@gmail.com</p>
+        <div class="container">
+            <div class="jumbotron col-sm-12 text-center">
+               <h1>Contact Me</h1>
+               <p>Address: Dublin California</p>
+               <p>Email: maggiepond888@gmail.com</p>
+            </div>
         </div>
         <!--banner ends here-->
         <div class="container">
