--- a/Pond_HTMLProject.html
+++ b/Pond_HTMLProject.html
@@ -50,7 +50,7 @@
                     <div>
                         <!--allows image animation-->
                         <img class="image custom-range border-for-img contactme-img" 
-                        src="images/cereal.jpg" width="200px" height="200px">
+                        src="images/Icon.jpg" width="200px" height="200px">
                         <a class="contactmebutton" href="Pond_ContactMe.html">
                             <button class="btn btn-primary">
                                 Contact Me!
@@ -60,41 +60,43 @@
                 </div>
                 <div class="col-sm-9">
                     <p> 
-                      <h1 class="text-center">Entrepreneurship Project</h1>
-                      <h5 class="text-center">(Project started May 11 2018
-                      Completed May 23 2017, POE Period 7)</h5>
+                      <h1 class="text-center">HTML (HyperText Markup Language)
+                      Website project</h1>
+                      <h5 class="text-center">(Project started November 5 2018
+                      completed November 30 2018, CSP 
+                      (Computer Science Principles))</h5>
                     </p>
                     <div class="indent">
                         <p>
-                          The Entrepreneurship Project is a project assigned
-                          yearly
-                          to all engineering 
-                          students. It concerns the development of a new
-                          solution to solve a widely 
-                          experienced problem. Depending on the problem, the
-                          deliverables for this 
-                          project could range from a working prototype to a well
-                          developed idea for one.
-                          My team (team Wake up, Breakfast Robot!) choose to
-                          address oversleeping and 
-                          therefore skipping breakfast or consuming a
-                          substandard breakfast. We chose to
-                          solve this problem by building and programming a
-                          prototype that makes cereal, 
-                          brings it to the user, wakes the user, and gives them
-                          cereal. For this project
-                          I was a primary builder. I built the platform,
-                          attached the grabbing mechanism, 
-                          made and attached the multi directional wheels, and
-                          assisted in the build of 
-                          the poking mechanism. I organized the build and came
-                          in almost everyday during
-                          lunch or Gael to work on the robot. During this
-                          project I showed great leadership
-                          and perseverance as a primary builder for the project.
+                          The HTML Website project, which this very website is
+                          the product of, is a project designed to test 
+                          student's abilities in using HTML and presenting 
+                          themselves professionally on a platform. The 
+                          constraints of this project were primarily time based 
+                          and challenges were not typically caused by 
+                          inexperience as students were given the documentation 
+                          to the bootstrap CSS (Cascading Style Sheets). The 
+                          deliverables for this project included fully annotated
+                           code and this website. As this was an individual 
+                          project I performed all of the research, design, 
+                          annotation, and coding required to build the website 
+                          and complete the project. However as a relative 
+                          novice, I was quite dependent on the bootstrap 
+                          documentation, but as I learnt more about HTML 
+                          through this project I was able to code more 
+                          effectively and independent of the documentation. 
+                          After the website was built, I added on several 
+                          animations across the site which required intense 
+                          research through the bootstrap documentation and 
+                          hours of trial and error, but were ultimately 
+                          worthwhile in the end. This website overall is the 
+                          composition of my ability to persevere and learn via 
+                          hands-on-experience by analysing pre existing code.
+
                           <br><br>
-                          Documentation: <a href= "https://docs.google.com/document/d/1alpXOxPnaZ4BvAnP-zx7Tr4g0wFRf5iE3VTYQEgKao8/edit" target="_blank">Here</a><br>
-                          Presentation: <a href= "https://docs.google.com/presentation/d/141B3dfa11ksVmD9HN2Q_7-iqbVj-YkIgNcEtqy8ePXw/edit" target="_blank">Here</a>
+                          Documentation: <a href= "https://mageronium.github.io/portfolio/" target="_blank">Here</a><br>
+                          <br><br>
+                          Hit Ctrl + U to see source code.
                         </p>
                     </div>
                 </div>
