--- a/Pond_TextAdventure.html
+++ b/Pond_TextAdventure.html
@@ -50,7 +50,7 @@
                     <div>
                         <!--allows image animation-->
                         <img class="image custom-range border-for-img contactme-img" 
-                        src="images/cereal.jpg" width="200px" height="200px">
+                        src="images/python.jpg" width="200px" height="200px">
                         <a class="contactmebutton" href="Pond_ContactMe.html">
                             <button class="btn btn-primary">
                                 Contact Me!
@@ -60,41 +60,56 @@
                 </div>
                 <div class="col-sm-9">
                     <p> 
-                      <h1 class="text-center">Entrepreneurship Project</h1>
-                      <h5 class="text-center">(Project started May 11 2018
-                      Completed May 23 2017, POE Period 7)</h5>
+                      <h1 class="text-center">Text Adventure Project</h1>
+                      <h5 class="text-center">(Project started January 6 2019 
+                      completed January 17 2019, CSP
+                      <br>
+                      (Computer Science Principles))</h5>
                     </p>
                     <div class="indent">
                         <p>
-                          The Entrepreneurship Project is a project assigned
-                          yearly
-                          to all engineering 
-                          students. It concerns the development of a new
-                          solution to solve a widely 
-                          experienced problem. Depending on the problem, the
-                          deliverables for this 
-                          project could range from a working prototype to a well
-                          developed idea for one.
-                          My team (team Wake up, Breakfast Robot!) choose to
-                          address oversleeping and 
-                          therefore skipping breakfast or consuming a
-                          substandard breakfast. We chose to
-                          solve this problem by building and programming a
-                          prototype that makes cereal, 
-                          brings it to the user, wakes the user, and gives them
-                          cereal. For this project
-                          I was a primary builder. I built the platform,
-                          attached the grabbing mechanism, 
-                          made and attached the multi directional wheels, and
-                          assisted in the build of 
-                          the poking mechanism. I organized the build and came
-                          in almost everyday during
-                          lunch or Gael to work on the robot. During this
-                          project I showed great leadership
-                          and perseverance as a primary builder for the project.
+                          The text adventure project is an introductory level 
+                          project to python and command line coding. The main 
+                          challenge of the project concerns the fact that loops 
+                          were forbidden to be used in the code and for the 
+                          project, which was corrected through the use of lists 
+                          as most recent variables. The deliverables for this 
+                          project included brainstorming and sprint tasks, 
+                          conclusion questions, a gallery walk table complete 
+                          with pro and con comments, fully commented code, and 
+                          finally a working version of the text adventure 
+                          itself. Originally the theme of the adventure was 
+                          either a wild west adventure (based on an escape from 
+                          a prison cell that was later adapted into a hangman 
+                          game project), sci fi adventure (based on direction 
+                          oriented puzzle solving and ethical conundrums), and 
+                          finally a comical text adventure based on the night 
+                          before finals, based almost solely on ethical 
+                          conundrums and their various consequences. Following 
+                          the original stages of the project where we as a 
+                          group chose ‘Romancing Our Way to a 5.0’ as the theme
+                          of 
+                          the game, coding at the very beginning was very 
+                          linear and simple prior to the discovery that index 0 
+                          of a list can be used as a most recent global 
+                          variable (accessed via as list[0]), which progressed 
+                          into the second tier of coding where the actions and 
+                          names of the user were saved across versions of the 
+                          game. In this project I was responsible for most of 
+                          the aforementioned coding and for laying out the 
+                          skeleton of how various questions and scenarios would 
+                          be presented to the viewer which required complete 
+                          and organized communication with my team members. 
+                          Often over the course of the project due to the 
+                          intense mass of coding in a small time frame, for 
+                          several days in both my free period (Gael) and lunch 
+                          I worked on the project without breaks. Thereupon, 
+                          this project demonstrates my ability to persevere, 
+                          communicate, and, primarily,  think creatively in 
+                          extremely limited situations.
                           <br><br>
-                          Documentation: <a href= "https://docs.google.com/document/d/1alpXOxPnaZ4BvAnP-zx7Tr4g0wFRf5iE3VTYQEgKao8/edit" target="_blank">Here</a><br>
-                          Presentation: <a href= "https://docs.google.com/presentation/d/141B3dfa11ksVmD9HN2Q_7-iqbVj-YkIgNcEtqy8ePXw/edit" target="_blank">Here</a>
+                          Documentation: <a href= "https://docs.google.com/document/d/1a1_dz8cYtNI7D--1IdL8k6g8bpRpGIyXt519SbiJwv4/edit?usp=sharing" target="_blank">Here</a><br>
+                          Code: <a href= "https://drive.google.com/file/d/1xQg531fC-8vNPNi7jlVCVmx2_RY6A0O2/view?usp=sharing" target="_blank">Here</a>
                         </p>
                     </div>
                 </div>
