--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -18,6 +18,10 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="Pond_Entrepreneurship.html">
                     Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_HTMLProject.html">
+                    HTML Website Project</a>
+                <a class="dropdown-item" href="Pond_TextAdventure.html">
+                    Text Adventure Project</a>
                 <!--<a class="dropdown-item" href="Pond_WinchProject.html">
                     Winch Project</a>-->
                 <!--
@@ -32,10 +36,12 @@
             </nav>
         </div>
         <!--banner starts here-->
-        <div class="jumbotron col-sm-12 text-center">
-           <h1>Work Experience</h1>
-           <p>Real world experience from school to beyond</p>
-           <p>Feild trips & Influential Speakers</p>
+        <div class="container">
+            <div class="jumbotron col-sm-12 text-center">
+               <h1>Work Experience</h1>
+               <p>Real world experience from school to beyond</p>
+               <p>Feild trips & Influential Speakers</p>
+            </div>
         </div>
         <!--banner ends here-->
         <div class="container">
@@ -131,16 +137,18 @@
                     </div>
                     <div class="indent">
                         <p>
-                            From my volunteer experience that concerns,
-                            primarily,
-                            interacting with children I have bettered my
-                            patience 
-                            and communicative skills. I started volunteering at 
-                            Crosspoint Church in November of 2018. From my
-                            volunteer work, I can confidently say that I would
-                            make cooperative
-                            and well-organized employee capable even of assuming 
-                            leadership roles when necessary.
+                            From my volunteer experience that concerns, 
+                            primarily, interacting with children I have 
+                            bettered my patience and communicative skills. I 
+                            started volunteering at Crosspoint Church in 
+                            November of 2018. From my volunteer work, I can 
+                            confidently say that I would make cooperative and 
+                            well-organized employee capable even of assuming 
+                            leadership roles when necessary, as seen in my 
+                            recent employment at CGA, California Gymnastics 
+                            Academy, as a Kinder and Introductory level coach 
+                            where I have extrapolated and applied the 
+                            aforementioned skills.
                         </p>
                     </div>
                 </div>
