--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="Pond_Entrepreneurship.html">
               Entrepreneurship Project</a>
+            <a class="dropdown-item" href="Pond_HTMLProject.html">
+                    HTML Website Project</a>
+            <a class="dropdown-item" href="Pond_TextAdventure.html">
+                    Text Adventure Project</a>
             <!--<a class="dropdown-item" href="Pond_WinchProject.html">
               Winch Project</a>-->
             <!--
