--- a/Pond_AboutMe.html
+++ b/Pond_AboutMe.html
@@ -20,6 +20,10 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="Pond_Entrepreneurship.html">
                     Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_HTMLProject.html">
+                    HTML Website Project</a>
+                <a class="dropdown-item" href="Pond_TextAdventure.html">
+                    Text Adventure Project</a>
                 <!--<a class="dropdown-item" href="Pond_WinchProject.html">
                     Winch Project</a>-->
                 <!--
@@ -34,9 +38,11 @@
             </nav>
         </div>
         <!--banner starts here-->
-        <div class="jumbotron col-sm-12 text-center">
-           <h1>About Me</h1>
-           <p>Competent Worker</p>
+        <div class="container">
+            <div class="jumbotron col-sm-12 text-center">
+               <h1>About Me</h1>
+               <p>Competent Worker</p>
+            </div>
         </div>
         <!--banner ends here-->
         <div class="container">
